tests/snapshots/advisories__advisories_expires_ignores__2023-11-29.snap
---
source: tests/advisories.rs
expression: expired
---
[
  {
    "fields": {
      "code": "advisory-ignore-expired",
      "graphs": [
        {
          "Krate": {
            "name": "ammonia",
            "version": "0.7.0"
          },
          "parents": [
            {
              "Krate": {
                "name": "advisories",
                "version": "0.1.0"
              }
            }
          ]
        }
      ],
      "labels": [
        {
          "column": 17,
          "line": 5,
          "message": "advisory ignored here",
          "span": "RUSTSEC-2019-0001"
        },
        {
          "column": 47,
          "line": 5,
          "message": "ignore reason",
          "span": "this is a test"
        },
        {
          "column": 74,
          "line": 5,
          "message": "expiry which was exceeded",
          "span": "P90D"
        }
      ],
      "message": "ignored advisory expired",
      "severity": "note"
    },
    "type": "diagnostic"
  },
  {
    "fields": {
      "code": "advisory-ignore-expired",
      "graphs": [
        {
          "Krate": {
            "name": "ammonia",
            "version": "1.2.0"
          },
          "parents": [
            {
              "Krate": {
                "name": "artifact_serde",
                "version": "0.3.1"
              },
              "parents": [
                {
                  "Krate": {
                    "name": "advisories",
                    "version": "0.1.0"
                  }
                }
              ]
            }
          ]
        }
      ],
      "labels": [
        {
          "column": 17,
          "line": 5,
          "message": "advisory ignored here",
          "span": "RUSTSEC-2019-0001"
        },
        {
          "column": 47,
          "line": 5,
          "message": "ignore reason",
          "span": "this is a test"
        },
        {
          "column": 74,
          "line": 5,
          "message": "expiry which was exceeded",
          "span": "P90D"
        }
      ],
      "message": "ignored advisory expired",
      "severity": "note"
    },
    "type": "diagnostic"
  }
]
